fix: window restore button icon not showing

--- a/client/src/styles/window.scss
+++ b/client/src/styles/window.scss
@@ -85,7 +85,7 @@
 		background-image: url("/res/img/icons/maximize.png");
 	}
 
-	.window.maximized .maxrestore-btn {
+	&.maximized .maxrestore-btn {
 		background-image: url("/res/img/icons/restore.png");
 	}
 
